--- a/AllRoundDecoder/AllRoundDecoder.csproj
+++ b/AllRoundDecoder/AllRoundDecoder.csproj
@@ -59,8 +59,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MorseDecode.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WD.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
