--- a/AllRoundDecoder/AllRoundDecoder.csproj
+++ b/AllRoundDecoder/AllRoundDecoder.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WD.cs" />
+    <Compile Include="WDStrict.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
